update index page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,36 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: GitHub Projects Collection
+description: A curated collection of useful GitHub projects for developers.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Discover amazing open-source projects on GitHub!
   image:
     file: ../../assets/houston.webp
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Browse Projects
+      link: /docs/github/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: View on GitHub
+      link: https://github.com/hjkl01/astro-github
       icon: external
       variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Explore Categories
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+	<Card title="Web Development" icon="rocket">
+		Discover tools and frameworks for building modern web applications.
 	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+	<Card title="DevOps & Tools" icon="setting">
+		Essential tools for development, deployment, and automation.
 	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+	<Card title="AI & Machine Learning" icon="brain">
+		Cutting-edge projects in artificial intelligence and data science.
 	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+	<Card title="Mobile & Desktop" icon="devices">
+		Apps and libraries for mobile and desktop development.
 	</Card>
 </CardGrid>
